--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,42 +1,107 @@
 ---
-import astroLogo from '../assets/astro.svg';
-import background from '../assets/background.svg';
+import astroLogo from "../assets/astro.svg";
+import background from "../assets/background.svg";
+import { useTranslations } from "../libs/i18n";
+
+// 現在のページのURLから翻訳機能を初期化
+const { t, l } = useTranslations(Astro.url);
 ---
 
-<div class="font-sans h-full">
-	<img class="fixed top-0 left-0 w-full h-full z-[-1] blur-[100px]" src={background.src} alt="" fetchpriority="high" />
-	<main class="h-full flex justify-center">
-		<section class="flex flex-col items-start justify-center p-4">
-			<a href="https://astro.build"
-				><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
-			>
-			<h1 class="text-[22px] mt-1">
-				To get started, open the <code class="inline-block bg-gradient-to-r from-[#f3cddd] to-[#f5cee7] bg-origin-padding border border-transparent rounded-lg p-[6px_8px]"><pre class="font-mono font-normal bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text text-transparent m-0">src/pages</pre></code> directory in your project.
-			</h1>
-			<section class="flex gap-4 flex-wrap">
-				<a class="flex items-center py-[10px] px-3 text-white bg-gradient-to-r from-[#3245ff] to-[#bc52ee] shadow-[inset_0_0_0_1px_rgba(255,255,255,0.12),inset_0_-2px_0_rgba(0,0,0,0.24)] rounded-[10px] no-underline transition-colors duration-200 hover:text-[rgb(230,230,230)] hover:shadow-none" href="https://docs.astro.build">Read our docs</a>
-				<a class="flex items-center py-[10px] px-3 text-[#111827] no-underline transition-colors duration-200 hover:text-[rgb(78,80,86)]" href="https://astro.build/chat"
-					>Join our Discord <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 127.14 96.36" class="h-[1em] ml-2"
-						><path
-							fill="currentColor"
-							d="M107.7 8.07A105.15 105.15 0 0 0 81.47 0a72.06 72.06 0 0 0-3.36 6.83 97.68 97.68 0 0 0-29.11 0A72.37 72.37 0 0 0 45.64 0a105.89 105.89 0 0 0-26.25 8.09C2.79 32.65-1.71 56.6.54 80.21a105.73 105.73 0 0 0 32.17 16.15 77.7 77.7 0 0 0 6.89-11.11 68.42 68.42 0 0 1-10.85-5.18c.91-.66 1.8-1.34 2.66-2a75.57 75.57 0 0 0 64.32 0c.87.71 1.76 1.39 2.66 2a68.68 68.68 0 0 1-10.87 5.19 77 77 0 0 0 6.89 11.1 105.25 105.25 0 0 0 32.19-16.14c2.64-27.38-4.51-51.11-18.9-72.15ZM42.45 65.69C36.18 65.69 31 60 31 53s5-12.74 11.43-12.74S54 46 53.89 53s-5.05 12.69-11.44 12.69Zm42.24 0C78.41 65.69 73.25 60 73.25 53s5-12.74 11.44-12.74S96.23 46 96.12 53s-5.04 12.69-11.43 12.69Z"
-						></path></svg
-					>
-				</a>
-			</section>
-		</section>
-	</main>
+<div class="h-full font-sans">
+    <img
+        class="fixed top-0 left-0 z-[-1] h-full w-full blur-[100px]"
+        src={background.src}
+        alt=""
+        fetchpriority="high"
+    />
+    <main class="flex h-full justify-center">
+        <section class="flex flex-col items-start justify-center p-4">
+            <a href="https://astro.build"
+                ><img src={astroLogo.src} width="115" height="48" alt="Astro Homepage" /></a
+            >
+            <h1 class="mt-1 text-[22px]">
+                {
+                    t({
+                        en: "To get started, open the",
+                        ja: "開始するには、プロジェクト内の",
+                        zh: "开始使用，请打开项目中的",
+                    })
+                }
+                <code
+                    class="inline-block rounded-lg border border-transparent bg-gradient-to-r from-[#f3cddd] to-[#f5cee7] bg-origin-padding p-[6px_8px]"
+                    ><pre
+                        class="m-0 bg-gradient-to-r from-[#d83333] to-[#f041ff] bg-clip-text font-mono font-normal text-transparent">src/pages</pre></code
+                >
+                {
+                    t({
+                        en: "directory in your project.",
+                        ja: "ディレクトリを開いてください。",
+                        zh: "目录。",
+                    })
+                }
+            </h1>
+            <section class="flex flex-wrap gap-4">
+                <a
+                    class="flex items-center rounded-[10px] bg-gradient-to-r from-[#3245ff] to-[#bc52ee] px-3 py-[10px] text-white no-underline shadow-[inset_0_0_0_1px_rgba(255,255,255,0.12),inset_0_-2px_0_rgba(0,0,0,0.24)] transition-colors duration-200 hover:text-[rgb(230,230,230)] hover:shadow-none"
+                    href={l("https://docs.astro.build")}
+                    >{
+                        t({
+                            en: "Read our docs",
+                            ja: "ドキュメントを読む",
+                            zh: "阅读文档",
+                        })
+                    }</a
+                >
+                <a
+                    class="flex items-center px-3 py-[10px] text-[#111827] no-underline transition-colors duration-200 hover:text-[rgb(78,80,86)]"
+                    href={l("https://astro.build/chat")}
+                    >{
+                        t({
+                            en: "Join our Discord",
+                            ja: "Discordに参加する",
+                            zh: "加入我们的Discord",
+                        })
+                    }
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 127.14 96.36"
+                        class="ml-2 h-[1em]"
+                        ><path
+                            fill="currentColor"
+                            d="M107.7 8.07A105.15 105.15 0 0 0 81.47 0a72.06 72.06 0 0 0-3.36 6.83 97.68 97.68 0 0 0-29.11 0A72.37 72.37 0 0 0 45.64 0a105.89 105.89 0 0 0-26.25 8.09C2.79 32.65-1.71 56.6.54 80.21a105.73 105.73 0 0 0 32.17 16.15 77.7 77.7 0 0 0 6.89-11.11 68.42 68.42 0 0 1-10.85-5.18c.91-.66 1.8-1.34 2.66-2a75.57 75.57 0 0 0 64.32 0c.87.71 1.76 1.39 2.66 2a68.68 68.68 0 0 1-10.87 5.19 77 77 0 0 0 6.89 11.1 105.25 105.25 0 0 0 32.19-16.14c2.64-27.38-4.51-51.11-18.9-72.15ZM42.45 65.69C36.18 65.69 31 60 31 53s5-12.74 11.43-12.74S54 46 53.89 53s-5.05 12.69-11.44 12.69Zm42.24 0C78.41 65.69 73.25 60 73.25 53s5-12.74 11.44-12.74S96.23 46 96.12 53s-5.04 12.69-11.43 12.69Z"
+                        ></path></svg
+                    >
+                </a>
+            </section>
+        </section>
+    </main>
 
-	<a href="https://astro.build/blog/astro-5/" class="absolute bottom-4 right-4 max-w-[300px] p-4 bg-white bg-opacity-100 rounded-2xl border border-white no-underline transition-[background] duration-200 backdrop-blur-[50px] hover:bg-opacity-55 md:left-auto md:right-4 md:bottom-10 md:max-w-full lg:max-w-[300px]">
-		<svg width="32" height="32" fill="none" xmlns="http://www.w3.org/2000/svg"
-			><path
-				d="M24.667 12c1.333 1.414 2 3.192 2 5.334 0 4.62-4.934 5.7-7.334 12C18.444 28.567 18 27.456 18 26c0-4.642 6.667-7.053 6.667-14Zm-5.334-5.333c1.6 1.65 2.4 3.43 2.4 5.333 0 6.602-8.06 7.59-6.4 17.334C13.111 27.787 12 25.564 12 22.666c0-4.434 7.333-8 7.333-16Zm-6-5.333C15.111 3.555 16 5.556 16 7.333c0 8.333-11.333 10.962-5.333 22-3.488-.774-6-4-6-8 0-8.667 8.666-10 8.666-20Z"
-				fill="#111827"></path></svg
-		>
-		<h2 class="m-0 mb-4 font-normal text-[#111827] text-[20px]">What's New in Astro 5.0?</h2>
-		<p class="text-[#4b5563] text-base leading-6 tracking-[-0.006em] m-0">
-			From content layers to server islands, click to learn more about the new features and
-			improvements in Astro 5.0
-		</p>
-	</a>
+    <a
+        href={l("https://astro.build/blog/astro-5/")}
+        class="bg-opacity-100 hover:bg-opacity-55 absolute right-4 bottom-4 max-w-[300px] rounded-2xl border border-white bg-white p-4 no-underline backdrop-blur-[50px] transition-[background] duration-200 md:right-4 md:bottom-10 md:left-auto md:max-w-full lg:max-w-[300px]"
+    >
+        <svg width="32" height="32" fill="none" xmlns="http://www.w3.org/2000/svg"
+            ><path
+                d="M24.667 12c1.333 1.414 2 3.192 2 5.334 0 4.62-4.934 5.7-7.334 12C18.444 28.567 18 27.456 18 26c0-4.642 6.667-7.053 6.667-14Zm-5.334-5.333c1.6 1.65 2.4 3.43 2.4 5.333 0 6.602-8.06 7.59-6.4 17.334C13.111 27.787 12 25.564 12 22.666c0-4.434 7.333-8 7.333-16Zm-6-5.333C15.111 3.555 16 5.556 16 7.333c0 8.333-11.333 10.962-5.333 22-3.488-.774-6-4-6-8 0-8.667 8.666-10 8.666-20Z"
+                fill="#111827"></path></svg
+        >
+        <h2 class="m-0 mb-4 text-[20px] font-normal text-[#111827]">
+            {
+                t({
+                    en: "What's New in Astro 5.0?",
+                    ja: "Astro 5.0の新機能は？",
+                    zh: "Astro 5.0有什么新功能？",
+                })
+            }
+        </h2>
+        <p class="m-0 text-base leading-6 tracking-[-0.006em] text-[#4b5563]">
+            {
+                t({
+                    en: "From content layers to server islands, click to learn more about the new features and improvements in Astro 5.0",
+                    ja: "コンテンツレイヤーからサーバーアイランドまで、Astro 5.0の新機能と改善点についてもっと知るにはクリックしてください",
+                    zh: "从内容层到服务器岛屿，点击了解更多关于Astro 5.0的新功能和改进",
+                })
+            }
+        </p>
+    </a>
 </div>
