--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,22 @@
 ---
 import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
+import { useTranslations } from "../libs/i18n";
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const { t, l } = useTranslations(Astro.url);
 ---
 
-<Layout>
+<Layout
+    title={t({
+        ja: "トップページ",
+        en: "Home",
+        zh: "首页",
+    })}
+    openGraph={{
+        basic: {
+            type: "website",
+        }
+    }}
+>
     <Welcome />
 </Layout>
