--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
-import Welcome from "../components/Welcome.astro";
 import Layout from "../layouts/Layout.astro";
 import { useTranslations } from "../libs/i18n";
+import Hero from "../components/Hero.astro";
+import AboutSection from "../components/AboutSection.astro";
+import LatestActivities from "../components/LatestActivities.astro";
+import LatestNews from "../components/LatestNews.astro";
 
-const { t, l } = useTranslations(Astro.url);
+const { t } = useTranslations(Astro.url);
 ---
 
 <Layout
@@ -15,8 +18,13 @@ const { t, l } = useTranslations(Astro.url);
     openGraph={{
         basic: {
             type: "website",
-        }
+        },
     }}
 >
-    <Welcome />
+    <main>
+        <Hero />
+        <AboutSection />
+        <LatestActivities />
+        <LatestNews />
+    </main>
 </Layout>
