--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,7 @@ import "../styles/global.css";
 import type { DeepPartial } from "../libs/utils";
 import Header from "../components/layouts/Header.astro";
 import Footer from "../components/layouts/Footer.astro";
+import CookieConsent from "../components/CookieConsent.astro";
 
 const { t, locale, allRoutes } = useTranslations(Astro.url);
 
@@ -57,11 +58,12 @@ const mergedSEO = merge(defaultSEO, props);
         <meta name="generator" content={Astro.generator} />
         <SEO {...mergedSEO} />
     </head>
-    <body class="flex min-h-screen flex-col bg-base-100">
+    <body class="bg-base-100 flex min-h-screen flex-col">
         <Header />
         <div class="flex-1">
             <slot />
         </div>
         <Footer />
+        <CookieConsent />
     </body>
 </html>
